增加tomcat7，apr方式启动